# RayTracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  DirectionLight.cpp  DirectionLight.h  Film.cpp  Film.h  Intersection.cpp  Intersection.h  Light.h  PointLight.cpp  PointLight.h  README.md  Ray.cpp  Ray.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Surface.h  main.cpp  raytracer.h
